# shallwe-core

./: .env.example  .gitignore  README.md  compose.dev.yaml  compose.qa.yaml  compose.yaml  load_dev_env_from_bw.sh  load_dev_envs.sh  pyproject.toml  requirements.txt  variables.md  variables.txt
shallwe_core/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  variables.md
shallwe_core/frontend/: asset-manifest.json  index.html
shallwe_core/mock_frontend/: asset-manifest.json  index.html
shallwe_core/shallwe_access/: apps.py  tests.py  urls.py  views.py
shallwe_core/shallwe_app/: apps.py  test_views.py  urls.py  views.py
shallwe_core/shallwe_auth/: apps.py  test_views.py  urls.py  views.py
shallwe_core/shallwe_core/: asgi.py  settings.py  urls.py  wsgi.py
shallwe_core/shallwe_core/envconfig/: .gitignore  envconfig.py  parse_to_constants.py
shallwe_core/shallwe_facecheck/: apps.py  facecheck.py  tests.py
shallwe_core/shallwe_locations/: admin.py  apps.py  models.py  search.py  tests.py  urls.py  views.py
shallwe_core/shallwe_locations/locations_src/: katottg.csv
shallwe_core/shallwe_locations/migrations/: 0001_initial.py  0002_alter_location_options.py  0003_alter_location_city.py
shallwe_core/shallwe_photo/: apps.py  facecheck.py  formatcheck.py  tests.py  urls.py  views.py
shallwe_core/shallwe_profile/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
shallwe_core/shallwe_profile/fixtures/: locations_medium_fixture.json  locations_mini_fixture.json
shallwe_core/shallwe_profile/migrations/: 0001_initial.py  0002_alter_userprofilerentpreferences_max_budget_and_more.py  0002_userprofile_user_profile_name_constraints.py  0003_alter_userprofile_name_userprofilepreferredlocations_and_more.py  0003_userprofilerentpreferences_rent_prefs_max_rent_duration_gte_min_rent_duration.py  0004_alter_userprofile_user.py  0005_remove_interesttag_profile_about_interest_tag_name_constraint_and_more.py
shallwe_core/shallwe_profile/models/: __init__.py  profile.py
shallwe_core/shallwe_profile/serializers/: __init__.py  about.py  common.py  profile.py  rent.py  (+1 more)
shallwe_core/shallwe_qa/: apps.py
shallwe_core/shallwe_util/: efficiency.py  tests.py  views.py
(+60 files in other folders)
